# veridian

./: Cargo.toml
extensions/vscode/: package-lock.json  package.json
src/: main.rs  server.rs
veridian-slang/: Cargo.toml  build.rs
veridian-slang/slang_wrapper/src/: BasicClient.h  FormatBuffer.h  basic_client.cpp  slang_lib.cpp
