[package]
name = "veridian"
version = "0.1.0"
authors = ["Vivek Malneedi <vivekmalneedi@gmail.com>"]
edition = "2018"

[features]
slang = ["veridian_slang"]

[dependencies]
tree-sitter = "0.20.0"
tree-sitter-verilog = { path = "../tree-sitter-verilog" }
log = "0.4.14"
tower-lsp = "0.14.1"
flexi_logger = "0.19.6"
ropey = "1.3.1"
tokio = { version = "1.13.0", features = ["macros", "io-std", "rt-multi-thread"] }
path-clean = "0.1.0"
pathdiff = "0.2.1"
walkdir = "2.3.2"
serde_yaml = "0.8.21"
anyhow = "1.0.45"
serde = "1.0.130"
which = "4.2.2"
regex = "1.5.4"
structopt = "0.3.25"
strum = "0.21.0"
strum_macros = "0.22.0"

[dependencies.veridian_slang]
optional = true
path = "veridian-slang"
